Webpack added, A grapher is now instantiated with a constructor and a prototype

--- a/example/function-grapher.html
+++ b/example/function-grapher.html
@@ -3,6 +3,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vega/3.0.7/vega.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vega-lite/2.0.1/vega-lite.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vega-embed/3.0.0-rc7/vega-embed.js"></script>
+    <script type="text/javascript" src="../dist/function-grapher.js"></script>
 </head>
 <body>
 <!-- Container for the visualization -->
@@ -17,109 +18,12 @@
 </style>
 
 <script>
+    var graph = new graphunc.default;
+
     var vlSpec = {
         "$schema": "https://vega.github.io/schema/vega-lite/v2.json",
         "data": {
-            "values": [ { x: 0, y: 1 },
-                { x: 1, y: 0.5403023058681398 },
-                { x: 2, y: -0.4161468365471424 },
-                { x: 3, y: -0.9899924966004454 },
-                { x: 4, y: -0.6536436208636119 },
-                { x: 5, y: 0.28366218546322625 },
-                { x: 6, y: 0.9601702866503661 },
-                { x: 7, y: 0.7539022543433046 },
-                { x: 8, y: -0.14550003380861354 },
-                { x: 9, y: -0.911130261884677 },
-                { x: 10, y: -0.8390715290764524 },
-                { x: 11, y: 0.004425697988050785 },
-                { x: 12, y: 0.843853958732492 },
-                { x: 13, y: 0.9074467814501962 },
-                { x: 14, y: 0.1367372182078336 },
-                { x: 15, y: -0.7596879128588213 },
-                { x: 16, y: -0.9576594803233847 },
-                { x: 17, y: -0.27516333805159693 },
-                { x: 18, y: 0.6603167082440802 },
-                { x: 19, y: 0.9887046181866692 },
-                { x: 20, y: 0.40808206181339196 },
-                { x: 21, y: -0.5477292602242684 },
-                { x: 22, y: -0.9999608263946371 },
-                { x: 23, y: -0.5328330203333975 },
-                { x: 24, y: 0.424179007336997 },
-                { x: 25, y: 0.9912028118634736 },
-                { x: 26, y: 0.6469193223286404 },
-                { x: 27, y: -0.2921388087338362 },
-                { x: 28, y: -0.9626058663135666 },
-                { x: 29, y: -0.7480575296890004 },
-                { x: 30, y: 0.15425144988758405 },
-                { x: 31, y: 0.9147423578045313 },
-                { x: 32, y: 0.8342233605065102 },
-                { x: 33, y: -0.013276747223059479 },
-                { x: 34, y: -0.8485702747846051 },
-                { x: 35, y: -0.9036922050915067 },
-                { x: 36, y: -0.12796368962740468 },
-                { x: 37, y: 0.7654140519453434 },
-                { x: 38, y: 0.9550736440472949 },
-                { x: 39, y: 0.26664293235993725 },
-                { x: 40, y: -0.6669380616522619 },
-                { x: 41, y: -0.9873392775238264 },
-                { x: 42, y: -0.39998531498835127 },
-                { x: 43, y: 0.5551133015206257 },
-                { x: 44, y: 0.9998433086476912 },
-                { x: 45, y: 0.5253219888177297 },
-                { x: 46, y: -0.4321779448847783 },
-                { x: 47, y: -0.9923354691509287 },
-                { x: 48, y: -0.6401443394691997 },
-                { x: 49, y: 0.3005925437436371 },
-                { x: 50, y: 0.9649660284921133 },
-                { x: 51, y: 0.7421541968137826 },
-                { x: 52, y: -0.16299078079570548 },
-                { x: 53, y: -0.9182827862121189 },
-                { x: 54, y: -0.8293098328631502 },
-                { x: 55, y: 0.022126756261955736 },
-                { x: 56, y: 0.853220107722584 },
-                { x: 57, y: 0.8998668269691938 },
-                { x: 58, y: 0.11918013544881928 },
-                { x: 59, y: -0.7710802229758452 },
-                { x: 60, y: -0.9524129804151563 },
-                { x: 61, y: -0.25810163593826746 },
-                { x: 62, y: 0.6735071623235862 },
-                { x: 63, y: 0.9858965815825497 },
-                { x: 64, y: 0.39185723042955 },
-                { x: 65, y: -0.562453851238172 },
-                { x: 66, y: -0.99964745596635 },
-                { x: 67, y: -0.5177697997895051 },
-                { x: 68, y: 0.4401430224960407 },
-                { x: 69, y: 0.9933903797222716 },
-                { x: 70, y: 0.6333192030862999 },
-                { x: 71, y: -0.3090227281660707 },
-                { x: 72, y: -0.9672505882738824 },
-                { x: 73, y: -0.7361927182273159 },
-                { x: 74, y: 0.17171734183077755 },
-                { x: 75, y: 0.9217512697247493 },
-                { x: 76, y: 0.8243313311075577 },
-                { x: 77, y: -0.03097503173121646 },
-                { x: 78, y: -0.8578030932449878 },
-                { x: 79, y: -0.8959709467909631 },
-                { x: 80, y: -0.11038724383904756 },
-                { x: 81, y: 0.7766859820216312 },
-                { x: 82, y: 0.9496776978825432 },
-                { x: 83, y: 0.24954011797333814 },
-                { x: 84, y: -0.6800234955873388 },
-                { x: 85, y: -0.9843766433940419 },
-                { x: 86, y: -0.38369844494974187 },
-                { x: 87, y: 0.569750334265312 },
-                { x: 88, y: 0.9993732836951247 },
-                { x: 89, y: 0.5101770449416689 },
-                { x: 90, y: -0.4480736161291702 },
-                { x: 91, y: -0.9943674609282015 },
-                { x: 92, y: -0.626444447910339 },
-                { x: 93, y: 0.31742870151970165 },
-                { x: 94, y: 0.9694593666699876 },
-                { x: 95, y: 0.7301735609948197 },
-                { x: 96, y: -0.18043044929108396 },
-                { x: 97, y: -0.9251475365964139 },
-                { x: 98, y: -0.8192882452914593 },
-                { x: 99, y: 0.0398208803931389 } ]
+            "values": graph.getData(),
         },
         "mark": "line",
         "encoding": {
